fixing rentals spacing

--- a/css/style.css
+++ b/css/style.css
@@ -703,7 +703,7 @@ footer {
 
 .rental-section {
   background: #3fa6ad;
-  margin-top: 120px; }
+  margin-top: 100px; }
 
 .main-rental-contain {
   margin-left: 15px;
